--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -10,3 +10,16 @@ sans-serif;
 $font-regular: 'Raleway',
 sans-serif;
 ;
+
+body {
+    font-family: $font-regular;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: $font-header;
+}
