--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+@font-face {
+  font-weight: 700;
+  font-style: normal;
+  font-family: OpenSans;
+  src: url(../fonts/OpenSans-Bold.ttf);
+}
+@font-face {
+  font-weight: 400;
+  font-style: normal;
+  font-family: Raleway;
+  src: url(../fonts/Raleway-Regular.ttf);
+}
 body {
-  font-family: "Raleway", sans-serif;
   background-color: #272727;
   color: #FFFFFF;
+  font-family: Raleway, sans-serif;
+  letter-spacing: 0.03em;
 }
 
 h1,
@@ -12,12 +23,40 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Open Sans", sans-serif;
+  font-family: OpenSans, sans-serif;
   color: #14A76C;
 }
 
 p {
   color: #FFFFFF;
+  font-family: Raleway, sans-serif;
+}
+
+figure {
+  background-color: #282828;
+  border-radius: 4px;
+  border: solid 1px #747474;
+  color: #FFFFFF;
+  margin: 0.5em;
+  padding: 0.5em;
+}
+
+pre,
+code {
+  font-family: monospace, monospace;
+  font-size: small;
+  margin: 0;
+  padding: 0;
+}
+
+pre {
+  overflow: auto;
+}
+
+pre > code {
+  display: block;
+  padding: 0.5em;
+  word-wrap: normal;
 }
 
 nav ul {
@@ -31,7 +70,7 @@ nav ul li:first-child {
 nav ul li {
   border-bottom: 1px solid #747474;
   display: none;
-  padding: 0.5em 0.5em;
+  padding: 0.6em 0.6em;
 }
 nav ul li a {
   text-decoration: none;
@@ -41,6 +80,7 @@ nav ul li a:visited {
 }
 nav ul li a:hover {
   color: #FF652F;
+  cursor: pointer;
 }
 nav ul li a:active {
   color: #FFE400;
