--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -50,32 +50,36 @@ p {
     font-family: $font-regular;
 }
 
-figure {
-    background-color: $color-ligth-blue;
-    border-radius: 4px;
-    border: solid 1px $color-white;
-    color: $color-black;
-    margin: 0.5em;
-    padding: 0.5em;
+@mixin code-snippet {
+    figure {
+        background-color: $color-ligth-blue;
+        border-radius: 4px;
+        border: solid 1px $color-white;
+        color: $color-black;
+        margin: 0.5em;
+        padding: 0.5em;
+    }
+
+    pre,
+    code {
+        font-family: monospace, monospace;
+        font-size: small;
+        margin: 0;
+        padding: 0;
+    }
+
+    pre {
+        overflow-x: auto;
+    }
+
+    pre>code {
+        display: block;
+        padding: 0.5em;
+        word-wrap: normal;
+    }
 }
 
-pre,
-code {
-    font-family: monospace, monospace;
-    font-size: small;
-    margin: 0;
-    padding: 0;
-}
-
-pre {
-    overflow-x: auto;
-}
-
-pre>code {
-    display: block;
-    padding: 0.5em;
-    word-wrap: normal;
-}
+@include code-snippet;
 
 nav {
     ul {
