--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,8 +11,8 @@
   src: url(../fonts/Raleway-Regular.ttf);
 }
 body {
-  background-color: #00887A;
-  color: #FFFFFF;
+  background-color: #00887a;
+  color: #ffffff;
   font-family: Raleway, sans-serif;
   letter-spacing: 0.03em;
 }
@@ -32,9 +32,9 @@ p {
 }
 
 figure {
-  background-color: #D3E3FC;
+  background-color: #d3e3fc;
   border-radius: 4px;
-  border: solid 1px #FFFFFF;
+  border: solid 1px #ffffff;
   color: #272727;
   margin: 0.5em;
   padding: 0.5em;
@@ -70,7 +70,7 @@ nav ul li:first-child {
   display: block;
 }
 nav ul li {
-  border-bottom: 1px solid #D3E3FC;
+  border-bottom: 1px solid #d3e3fc;
   display: none;
   padding: 0.6em 0.6em;
 }
@@ -78,10 +78,10 @@ nav ul li a {
   text-decoration: none;
 }
 nav ul li a:visited {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 nav ul li a:hover {
-  color: #D3E3FC;
+  color: #d3e3fc;
   cursor: pointer;
 }
 nav ul li a:active {
@@ -89,7 +89,7 @@ nav ul li a:active {
 }
 
 footer {
-  background-color: #77A6F7;
+  background-color: #77a6f7;
   padding: 1em;
   text-align: center;
 }
@@ -108,6 +108,55 @@ footer {
     width: 80%;
     margin: 0 auto;
   }
+}
+.team-activity-container {
+  background-color: #f2f2f2;
+  color: #272727;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding: 10px;
+  width: 500px;
+}
+.team-activity-container input[type=text] {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  display: inline-block;
+  font-size: 18px;
+  margin: 8px 0;
+  padding: 12px 20px;
+  width: 100%;
+}
+.team-activity-container input[type=submit] {
+  border: none;
+  background-color: #77a6f7;
+  border: solid 1px #d3e3fc;
+  color: #ffffff;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 18px;
+  padding: 14px 20px;
+  text-align: center;
+  width: 100%;
+}
+.team-activity-container input[type=submit]:hover {
+  background-color: #00887a;
+}
+.team-activity-container > .result-container {
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  color: #272727;
+  margin: 0 auto;
+  margin-top: 10px;
+  height: 100px;
+  padding-top: 12px;
+  text-align: center;
+  width: 100%;
+}
+.team-activity-container .operation {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 0.5em;
 }
 
 /*# sourceMappingURL=style.css.map */
