--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -1,39 +1,34 @@
 @font-face {
-    font-weight: 700;
-    font-style: normal;
-    font-family: OpenSans;
-    src: url(../fonts/OpenSans-Bold.ttf);
+  font-weight: 700;
+  font-style: normal;
+  font-family: OpenSans;
+  src: url(../fonts/OpenSans-Bold.ttf);
 }
 
 @font-face {
-    font-weight: 400;
-    font-style: normal;
-    font-family: Raleway;
-    src: url(../fonts/Raleway-Regular.ttf);
+  font-weight: 400;
+  font-style: normal;
+  font-family: Raleway;
+  src: url(../fonts/Raleway-Regular.ttf);
 }
 
 //colors
-$color-green: #00887A;
-$color-orange: #FFCCBC;
-$color-white: #FFFFFF;
-$color-ligth-blue: #D3E3FC;
-$color-blue: #77A6F7;
+$color-green: #00887a;
+$color-orange: #ffccbc;
+$color-white: #ffffff;
+$color-ligth-blue: #d3e3fc;
+$color-blue: #77a6f7;
 $color-black: #272727;
 
-
 //fonts
-$font-header: OpenSans,
-sans-serif;
-$font-regular: Raleway,
-sans-serif;
+$font-header: OpenSans, sans-serif;
+$font-regular: Raleway, sans-serif;
 $font-code: monospace;
-;
-
 body {
-    background-color: $color-green;
-    color: $color-white;
-    font-family: $font-regular;
-    letter-spacing: 0.03em;
+  background-color: $color-green;
+  color: $color-white;
+  font-family: $font-regular;
+  letter-spacing: 0.03em;
 }
 
 h1,
@@ -42,101 +37,156 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: $font-header;
-    color: $color-black;
+  font-family: $font-header;
+  color: $color-black;
 }
 
 p {
-    font-family: $font-regular;
+  font-family: $font-regular;
 }
 
 @mixin code-snippet {
-    figure {
-        background-color: $color-ligth-blue;
-        border-radius: 4px;
-        border: solid 1px $color-white;
-        color: $color-black;
-        margin: 0.5em;
-        padding: 0.5em;
-    }
+  figure {
+    background-color: $color-ligth-blue;
+    border-radius: 4px;
+    border: solid 1px $color-white;
+    color: $color-black;
+    margin: 0.5em;
+    padding: 0.5em;
+  }
 
-    pre,
-    code {
-        font-family: monospace, monospace;
-        font-size: small;
-        margin: 0;
-        padding: 0;
-    }
+  pre,
+  code {
+    font-family: monospace, monospace;
+    font-size: small;
+    margin: 0;
+    padding: 0;
+  }
 
-    pre {
-        overflow-x: auto;
-    }
+  pre {
+    overflow-x: auto;
+  }
 
-    pre>code {
-        display: block;
-        padding: 0.5em;
-        word-wrap: normal;
-    }
+  pre > code {
+    display: block;
+    padding: 0.5em;
+    word-wrap: normal;
+  }
 }
 
 @include code-snippet;
 
 nav {
-    background-color: $color-black;
+  background-color: $color-black;
 
-    ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 
-        li:first-child {
-            display: block;
-        }
-
-        li {
-            border-bottom: 1px solid $color-ligth-blue;
-            display: none;
-            padding: 0.6em 0.6em;
-
-            a {
-                text-decoration: none;
-            }
-
-            a:visited {
-                color: $color-white;
-            }
-
-            a:hover {
-                color: $color-ligth-blue;
-                cursor: pointer;
-            }
-
-            a:active {
-                color: $color-black;
-            }
-        }
+    li:first-child {
+      display: block;
     }
+
+    li {
+      border-bottom: 1px solid $color-ligth-blue;
+      display: none;
+      padding: 0.6em 0.6em;
+
+      a {
+        text-decoration: none;
+      }
+
+      a:visited {
+        color: $color-white;
+      }
+
+      a:hover {
+        color: $color-ligth-blue;
+        cursor: pointer;
+      }
+
+      a:active {
+        color: $color-black;
+      }
+    }
+  }
 }
 
 footer {
-    background-color: $color-blue;
-    padding: 1em;
-    text-align: center;
+  background-color: $color-blue;
+  padding: 1em;
+  text-align: center;
 }
 
 /* Class selectors */
 .open li {
-    display: block;
+  display: block;
 }
 
 @media only screen and (min-width: 768px) {
+  /* For desktop: */
+  nav,
+  header,
+  main,
+  footer {
+    width: 80%;
+    margin: 0 auto;
+  }
+}
 
-    /* For desktop: */
-    nav,
-    header,
-    main,
-    footer {
-        width: 80%;
-        margin: 0 auto;
-    }
+// Team Activity
+.team-activity-container {
+  background-color: #f2f2f2;
+  color: $color-black;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding: 10px;
+  width: 500px;
+
+  input[type="text"] {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    display: inline-block;
+    font-size: 18px;
+    margin: 8px 0;
+    padding: 12px 20px;
+    width: 100%;
+  }
+
+  input[type="submit"] {
+    border: none;
+    background-color: $color-blue;
+    border: solid 1px $color-ligth-blue;
+    color: $color-white;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 18px;
+    padding: 14px 20px;
+    text-align: center;
+    width: 100%;
+  }
+
+  input[type="submit"]:hover {
+    background-color: $color-green;
+  }
+
+  > .result-container {
+    background-color: $color-white;
+    border: 1px solid #ccc;
+    color: $color-black;
+    margin: 0 auto;
+    margin-top: 10px;
+    height: 100px;
+    padding-top: 12px;
+    text-align: center;
+    width: 100%;
+  }
+
+  .operation {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 0.5em;
+  }
 }
