--- a/static/css/style.css
+++ b/static/css/style.css
@@ -128,14 +128,15 @@ footer {
   }
 }
 .team-activity-container {
+  border-radius: 4px;
   background-color: #f2f2f2;
   color: #272727;
   margin: 0 auto;
-  margin-top: 20px;
-  padding: 10px;
-  width: 500px;
+  padding: 1em;
+  margin: 1em;
 }
-.team-activity-container input[type=text] {
+.team-activity-container input[type=text],
+.team-activity-container input[type=number] {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
