--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -159,14 +159,16 @@ footer {
 
 // Team Activity
 .team-activity-container {
+  border-radius: 4px;
   background-color: #f2f2f2;
   color: $color-black;
   margin: 0 auto;
-  margin-top: 20px;
-  padding: 10px;
-  width: 500px;
+  padding: 1em;
+  margin: 1em;
 
-  input[type="text"] {
+  input[type="text"],
+  input[type="number"],
+    {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
