added comments on the javascript file

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -164,7 +164,8 @@ footer {
   color: $color-black;
   margin: 0 auto;
   padding: 1em;
-  margin: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
 
   input[type="text"],
   input[type="number"],
