--- a/static/css/style.css
+++ b/static/css/style.css
@@ -133,7 +133,8 @@ footer {
   color: #272727;
   margin: 0 auto;
   padding: 1em;
-  margin: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 .team-activity-container input[type=text],
 .team-activity-container input[type=number] {
