--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -130,8 +130,10 @@ nav {
 }
 
 main {
-  margin-left: 1em;
-  margin-right: 1em;
+  section {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
 }
 
 footer {
