--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -48,6 +48,11 @@ p {
   font-family: $font-regular;
 }
 
+.minimal-margin-padding {
+  padding: 0;
+  margin: 0.1em;
+}
+
 @mixin code-snippet {
   figure {
     background-color: $color-ligth-blue;
