--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -174,9 +174,13 @@ footer {
   margin-top: 1em;
   margin-bottom: 1em;
 
+  ul {
+    list-style: none;
+  }
+
   input[type="text"],
   input[type="number"],
-    {
+  input[type="output"] {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
