--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -202,6 +202,7 @@ footer {
     padding: 14px 20px;
     text-align: center;
     width: 100%;
+    margin-bottom: 8px;
   }
 
   input[type="submit"]:hover {
