--- a/static/css/todo.css
+++ b/static/css/todo.css
@@ -1,5 +1,5 @@
 .todo-container {
-  background-color: #FFF;
+  background-color: #fff;
   color: #000;
   display: grid;
   grid-template-columns: auto;
@@ -37,17 +37,32 @@
   font-size: large;
 }
 
-.todo-control {
+.todo-filter {
+  padding: 1em;
+}
+.todo-filter > .todo-filter {
+  padding: 1em;
+}
+
+.font-small {
+  font-size: small;
+}
+
+.todo-control > form {
   display: grid;
   grid-template-columns: 80% 20%;
   grid-column-gap: 0.2em;
+}
+
+.horizontal-line {
+  text-decoration: line-through;
 }
 
 .btn {
   background: transparent;
   background-color: transparent;
   border: solid 1px darkgray;
-  font-size: medium;
+  cursor: pointer;
 }
 
 .todo-create,
@@ -56,11 +71,12 @@
 }
 
 .todo-filter-btn {
-  padding: 0.2em;
+  border: none;
+  padding: 0.5em;
 }
 
-.todo-btn {
-  cursor: pointer;
+.border-all {
+  border: solid 1px darkgray;
 }
 
 /*# sourceMappingURL=todo.css.map */
