--- a/static/scss/todo.scss
+++ b/static/scss/todo.scss
@@ -1,29 +1,57 @@
+// variables
+$icon-color: #272727;
+$border-color: #939393;
+$text-color: #101010;
+$background-color: #fffcff;
+$grid-color: #e9e9e9;
+$border-size: 2px;
+
+main {
+  > section {
+    background-color: $background-color;
+    background-size: 100%;
+    background-image: repeating-linear-gradient(
+        0deg,
+        $grid-color,
+        $grid-color 1px,
+        transparent 1px,
+        transparent 20px
+      ),
+      repeating-linear-gradient(
+        -90deg,
+        $grid-color,
+        $grid-color 1px,
+        transparent 1px,
+        transparent 20px
+      );
+    padding: 1em;
+  }
+
+  h1 {
+    text-align: center;
+    padding: 1em;
+  }
+}
 .todo-container {
-  background-color: #fff;
-  color: #000;
+  color: $text-color;
   display: grid;
   grid-template-columns: auto;
   grid-row-gap: 1em;
-  margin: 1em;
-  padding: 1em;
 }
 
 .todo-list {
-  border: solid 1px darkgray;
-  width: 100%;
-}
-
-.todo-list {
-  border: solid 1px darkgray;
+  background-color: $background-color;
+  border: solid $border-size $border-color;
   list-style: none;
   margin: 0;
   padding: 0;
+  width: 100%;
 
   //li {
   //  border: solid 1px darkgray;
   //}
   li:not(:last-child) {
-    border-bottom: 1px solid darkgray;
+    border-bottom: solid $border-size $border-color;
   }
 
   > .todo-item {
@@ -39,7 +67,7 @@
 
     input[type="checkbox"] {
       border: none;
-      border: solid 1px darkgray;
+      border: solid $border-size $border-color;
       font-size: large;
     }
   }
@@ -58,7 +86,7 @@
 
 .todo-control > form {
   display: grid;
-  grid-template-columns: 80% 20%;
+  grid-template-columns: 95% auto;
   grid-column-gap: 0.2em;
 }
 
@@ -72,7 +100,7 @@
   left: 0;
   top: 50%;
   height: 1px;
-  background: darkgray;
+  background: $border-color;
   content: "";
   width: 100%;
   display: block;
@@ -81,13 +109,47 @@
 .btn {
   background: transparent;
   background-color: transparent;
-  border: solid 1px darkgray;
+  border: solid $border-size $border-color;
   cursor: pointer;
+}
+
+.todo-create {
+  border: transparent;
+  background: transparent;
+  background-color: transparent;
+  border: solid $border-size $border-color;
 }
 
 .todo-create,
 .todo-btn {
   padding: 1em;
+  position: relative;
+}
+
+.todo-btn::after {
+  content: "";
+  position: absolute;
+  display: block;
+  background-color: $icon-color;
+  height: 4px;
+  margin-top: -2px; // height / 2
+  top: 50%;
+  left: 4px;
+  right: 4px;
+  z-index: 10;
+}
+
+.todo-btn::before {
+  content: "";
+  position: absolute;
+  display: block;
+  background-color: $icon-color;
+  width: 4px;
+  margin-left: -2px; // width / 2
+  left: 50%;
+  top: 4px;
+  bottom: 4px;
+  z-index: 11;
 }
 
 .todo-filter-btn {
@@ -96,7 +158,7 @@
 }
 
 .border-all {
-  border: solid 1px darkgray;
+  border: solid $border-size $border-color;
 }
 
 //.todo-btn {
