--- a/static/scss/todo.scss
+++ b/static/scss/todo.scss
@@ -7,23 +7,19 @@ $grid-color: #e9e9e9;
 $border-size: 2px;
 
 main {
-  > section {
+  >section {
     background-color: $background-color;
     background-size: 100%;
-    background-image: repeating-linear-gradient(
-        0deg,
+    background-image: repeating-linear-gradient(0deg,
         $grid-color,
         $grid-color 1px,
         transparent 1px,
-        transparent 20px
-      ),
-      repeating-linear-gradient(
-        -90deg,
+        transparent 20px),
+      repeating-linear-gradient(-90deg,
         $grid-color,
         $grid-color 1px,
         transparent 1px,
-        transparent 20px
-      );
+        transparent 20px);
     padding: 1em;
   }
 
@@ -32,6 +28,7 @@ main {
     padding: 1em;
   }
 }
+
 .todo-container {
   color: $text-color;
   display: grid;
@@ -54,7 +51,7 @@ main {
     border-bottom: solid $border-size $border-color;
   }
 
-  > .todo-item {
+  >.todo-item {
     padding: 1em;
     display: flex;
     flex: 10% auto 10%;
@@ -68,6 +65,7 @@ main {
     :first-child {
       width: 5%;
     }
+
     :nth-child(2) {
       width: 90%;
     }
@@ -80,7 +78,7 @@ main {
 
     input[type="checkbox"] {
       border: none;
-      
+
       font-size: large;
       opacity: 0;
       border: solid $border-size $border-color;
@@ -90,7 +88,8 @@ main {
 
 .todo-filter {
   padding: 1em;
-  > .todo-filter {
+
+  >.todo-filter {
     padding: 1em;
   }
 }
@@ -99,7 +98,7 @@ main {
   font-size: small;
 }
 
-.todo-control > form {
+.todo-control {
   display: grid;
   grid-template-columns: 95% auto;
   grid-column-gap: 0.2em;
