--- a/static/scss/todos.scss
+++ b/static/scss/todos.scss
@@ -6,6 +6,12 @@ $background-color: #fffcff;
 $grid-color: #e9e9e9;
 $border-size: 2px;
 
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
+
 main {
     background-color: $background-color;
     background-size: 100%;
@@ -24,6 +30,7 @@ main {
     display: grid;
     grid-template-columns: auto;
     grid-row-gap: 1em;
+    width: 100%;
 
 
     h1 {
@@ -78,9 +85,8 @@ main {
     border-left: solid $border-size $border-color;
     border-right: solid $border-size $border-color;
     border-bottom: solid $border-size $border-color;
-    font-size: large;
     padding: 0.5em;
-    padding-left: 2em;
+    padding-left: 2rem;
 }
 
 .font-small {
@@ -89,8 +95,9 @@ main {
 
 .todo-control {
     display: grid;
-    grid-template-columns: 95% auto;
+    grid-template-columns: 1fr auto;
     grid-column-gap: 0.2em;
+    width: 100%;
 }
 
 .horizontal-line {
@@ -193,6 +200,7 @@ main {
 .todo-filter-btn {
     border: none;
     padding: 0.5em;
+    font-size: medium;
 }
 
 .border-all {
