--- a/static/scss/todos.scss
+++ b/static/scss/todos.scss
@@ -59,7 +59,7 @@ main {
     >.todo-item {
         padding: 0.5em;
         display: flex;
-        flex: 10% auto 10%;
+        flex: 30px auto 10%;
         align-items: center;
         text-align: left;
         //grid-template-columns: 10% auto 40px;
@@ -67,12 +67,12 @@ main {
         //justify-items: center;
         //align-items: center;
 
-        :first-child {
-            width: 5%;
+        label:first-child {
+            width: 30px;
             margin: 5px;
         }
 
-        :nth-child(2) {
+        div:nth-child(2) {
             width: 90%;
             margin: 5px;
         }
@@ -210,4 +210,42 @@ main {
 
 .border-all {
     border: solid $border-size $border-color;
+}
+
+// custom checkbox
+/* Customize the label (the container) */
+.container {
+    display: block;
+    position: relative;
+    //padding-left: 35px;
+    //margin-bottom: 12px;
+    cursor: pointer;
+    //font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: solid 1px red;
+    min-width: 30px;
+    width: 30px;
+    height: 30px;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.checkmark {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    border: solid 1px blue;
+    min-width: 24px;
+    width: 24px;
+    height: 24px;
 }
