--- a/static/css/todos.css
+++ b/static/css/todos.css
@@ -1,19 +1,19 @@
 main {
   background-color: #fffcff;
-  background-size: 100%;
   background-image: repeating-linear-gradient(0deg, #e9e9e9, #e9e9e9 1px, transparent 1px, transparent 20px), repeating-linear-gradient(-90deg, #e9e9e9, #e9e9e9 1px, transparent 1px, transparent 20px);
-  padding: 1em;
+  background-size: 100%;
   color: #101010;
   display: grid;
-  grid-template-columns: auto;
   grid-row-gap: 1em;
+  grid-template-columns: auto;
+  padding: 1em;
   width: 100%;
 }
 main h1 {
+  font-size: 3em;
   margin: 0;
   padding: 0;
   text-align: center;
-  font-size: 3em;
 }
 
 .todo-list {
@@ -28,19 +28,19 @@ main h1 {
   border-bottom: solid 2px #939393;
 }
 .todo-list > .todo-item {
-  padding: 0.5em;
+  align-items: center;
   display: flex;
   flex: 30px auto 10%;
-  align-items: center;
+  padding: 0.5em;
   text-align: left;
 }
 .todo-list > .todo-item label:first-child {
-  width: 30px;
   margin: 5px;
+  width: 30px;
 }
 .todo-list > .todo-item div:nth-child(2) {
-  width: 90%;
   margin: 5px;
+  width: 90%;
 }
 .todo-list > .todo-item input[type=checkbox] {
   font-size: large;
@@ -48,12 +48,12 @@ main h1 {
 
 .todo-filter {
   background-color: #fffcff;
+  border-bottom: solid 2px #939393;
   border-left: solid 2px #939393;
   border-right: solid 2px #939393;
-  border-bottom: solid 2px #939393;
-  padding-top: 0.3em;
   padding-bottom: 0.3em;
   padding-left: 1em;
+  padding-top: 0.3em;
 }
 
 .font-small {
@@ -72,14 +72,14 @@ main h1 {
 }
 
 .horizontal-line:after {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  height: 2px;
   background: #939393;
   content: "";
-  width: 100%;
   display: block;
+  left: 0;
+  height: 2px;
+  position: absolute;
+  top: 50%;
+  width: 100%;
 }
 
 .btn {
@@ -90,22 +90,22 @@ main h1 {
 }
 
 .todo-remove-item {
-  width: 30px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
   height: 30px;
   position: relative;
-  cursor: pointer;
-  border: none;
-  background: transparent;
+  width: 30px;
 }
 
 .todo-remove-item::after,
 .todo-remove-item::before {
   background-color: #272727;
   content: "";
-  position: absolute;
-  width: 26px;
   height: 4px;
+  position: absolute;
   top: 16px;
+  width: 26px;
 }
 
 .todo-remove-item::after {
@@ -117,20 +117,20 @@ main h1 {
 }
 
 .todo-remove-item::before {
-  right: 4px;
   left: 4px;
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
+  right: 4px;
   transform: rotate(-45deg);
 }
 
 .todo-create {
-  border: transparent;
   background: transparent;
   background-color: transparent;
+  border: transparent;
   border: solid 2px #939393;
-  min-width: 45px;
   font-size: medium;
+  min-width: 45px;
 }
 
 .todo-create,
@@ -139,36 +139,36 @@ main h1 {
   position: relative;
 }
 
-.todo-btn::after {
-  content: "";
-  position: absolute;
-  display: block;
+.todo-btn::after,
+.todo-btn::before {
   background-color: #272727;
+  content: "";
+  display: block;
+  position: absolute;
+}
+
+.todo-btn::after {
   height: 4px;
+  left: 8px;
   margin-top: -2px;
   top: 50%;
-  left: 8px;
   right: 8px;
   z-index: 10;
 }
 
 .todo-btn::before {
-  content: "";
-  position: absolute;
-  display: block;
-  background-color: #272727;
-  width: 4px;
-  margin-left: -2px;
-  left: 50%;
-  top: 8px;
   bottom: 8px;
+  left: 50%;
+  margin-left: -2px;
+  top: 8px;
+  width: 4px;
   z-index: 11;
 }
 
 .todo-filter-btn {
   border: none;
-  padding: 0.5em;
   font-size: medium;
+  padding: 0.5em;
 }
 
 .border-all {
@@ -177,38 +177,38 @@ main h1 {
 
 /* Customize the label (the container) */
 .container {
-  display: block;
-  position: relative;
+  border: solid 2px #939393;
   cursor: pointer;
+  display: block;
+  height: 32px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none;
-  border: solid 2px #939393;
   min-width: 32px;
+  position: relative;
+  user-select: none;
   width: 32px;
-  height: 32px;
   z-index: 98;
 }
 
 /* Hide the browser's default checkbox */
 .container input {
-  position: absolute;
-  opacity: 0;
   cursor: pointer;
   height: 0;
+  position: absolute;
+  opacity: 0;
   width: 0;
 }
 
 .checkmark {
+  border: solid 1px #939393;
   display: block;
+  height: 24px;
+  left: 2px;
+  min-width: 24px;
   position: relative;
   top: 2px;
-  left: 2px;
-  border: solid 1px #939393;
-  min-width: 24px;
   width: 24px;
-  height: 24px;
   z-index: 99;
 }
 
@@ -221,27 +221,23 @@ main h1 {
 .checkmark::before {
   background-color: #939393;
   content: "";
-  position: relative;
-  min-width: 32px;
-  width: 32px;
   height: 1px;
+  min-width: 32px;
+  position: relative;
+  width: 32px;
 }
 
 .checkmark::after {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  transform: rotate(45deg);
   left: -5px;
-  z-index: 100;
   top: -22px;
+  transform: rotate(45deg);
+  z-index: 100;
 }
 
 .checkmark::before {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  transform: rotate(-45deg);
   right: 5px;
   top: -4px;
+  transform: rotate(-45deg);
 }
 
 /*# sourceMappingURL=todos.css.map */
