--- a/static/css/todos.css
+++ b/static/css/todos.css
@@ -240,4 +240,12 @@ main h1 {
   transform: rotate(-45deg);
 }
 
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  main {
+    width: 80%;
+    margin: 0 auto;
+  }
+}
+
 /*# sourceMappingURL=todos.css.map */
